--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -7,7 +7,7 @@
     </p>
     <p>
         <label for="email">password :</label>
-        <input type="text" name="password"> 
+        <input type="password" name="password"> 
     </p>
     <p>
         <input type="submit" title="Submit">
