--- a/pages/html/login.html
+++ b/pages/html/login.html
@@ -6,7 +6,7 @@
         <input type="text" name="username"> 
     </p>
     <p>
-        <label for="email">password :</label>
+        <label for="password">password :</label>
         <input type="password" name="password"> 
     </p>
     <p>
