--- a/pages/html/home.html
+++ b/pages/html/home.html
@@ -5,6 +5,15 @@ Welcome to da home page <br>
 Dis is da site <br>
 Hope it works <br>
 
-{{ posts }}
+Meanwhile see all the posts people have made: <br>
+{% if posts %}
+    <ul>
+        {% for post in posts %}
+        <li>{{ post.username }} <br> {{ post.content }}</li>
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>No one posted anything :(</p>
+{% endif %}
 
 {% endblock %}
