--- a/pages/html/home.html
+++ b/pages/html/home.html
@@ -1,19 +1,23 @@
 {% extends "base.html" %}
 {% block body %}
 
-Welcome to da home page <br>
-Dis is da site <br>
-Hope it works <br>
+<link rel="stylesheet" href="{{ url_for('css', path='home.css') }}">
 
-Meanwhile see all the posts people have made: <br>
-{% if posts %}
-    <ul>
-        {% for post in posts %}
-        <li>{{ post.username }} <br> {{ post.content }}</li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>No one posted anything :(</p>
-{% endif %}
+<div id="home-page">
+    <div class="yap">
+        Welcome to da home page <br>
+        Dis is da site <br>
+        Hope it works <br>
+        Meanwhile see all the posts people have made <br>
+    </div>
+    
+    <div class="user-yap">
+        {% if posts %}
+                {% include "post.html" %}
+        {% else %}
+            No one posted anything :(
+        {% endif %}
+    </div>
+</div>
 
 {% endblock %}
